--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<!-- Menu: anchored top -->
 	<div id="menu">
-		<img src="Resources/Logo.png" alt="Logo Gif" class="logo-img">	
+		<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">	
 		<div class="menu-items">
 			<a href="#div-reference">
 				<p class="menu-item-txt">Reference</p>
@@ -31,7 +31,7 @@
 	<div id="particles-js"></div>
 
 	<!-- Logo Gif -->
-	<img src="Resources/Logo.gif" alt="Logo Gif" class="logo-gif">
+	<img src="Resources/logo.gif" alt="Logo Gif" class="logo-gif">
 	
 	<!-- Intro Texts -->
 	<div class="div-text">
