--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="Libraries/particles.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
-	<link rel="stylesheet" type="text/css" href="Styles/particlesStyles.css">
+	<link rel="stylesheet" type="text/css" href="Styles/ParticlesStyles.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
