add explore page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Test Webpage</title>
 	<script src="Libraries/particles.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="Styles/home-styles.css">
 	<link rel="stylesheet" type="text/css" href="Styles/particlestyles.css">
+	<link rel="stylesheet" type="text/css" href="Styles/share-styles.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
@@ -45,7 +46,9 @@
 	</div>
 
 	<!-- Explore Button -->
-	<button type="button" class="btn-explore">EXPLORE</button>
+	<a href="explore.html">
+		<button type="button" class="btn-explore">EXPLORE</button>
+	</a>
 
 	<!-- Intro Video -->
 	<video width="80%" height="auto" controls class="video">
@@ -106,8 +109,6 @@
 			<p class= "center body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
 		</div>
 	</div>
-
-	
 
 	<script src="Scripts/ParticlesScript.js"></script>
 </body>
