change to https

--- a/explore.html
+++ b/explore.html
@@ -33,7 +33,7 @@
 		</div>
 	</div>
 
-	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="Scripts/explore-script.js"></script>
 
 </body>
