--- a/explore.html
+++ b/explore.html
@@ -19,17 +19,16 @@
 		<p class="page-title">AR DYNAMIC DESIGN</p>
 		<div class="menu-items">
 			<a href=" ">
-				<p class="menu-item-txt">Reference</p>
+				<p class="menu-item-txt">Search</p>
 			</a>
 		</div>
 	</div>
 
 	<div id="container">
 		<div id="right-side-panel">
-			<h1> Testing right side panel</h1>
+			<p class="body">Where information goes :)</p>
 		</div>
 		<div id="left-side-panel">
-			<p> just testing here </p>
 		</div>
 	</div>
 
