update index with link on logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 	<!-- Menu: anchored top -->
 	<div id="menu">
-		<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">	
+		<a href="index.html">
+			<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">
+		</a>	
 		<div class="menu-items">
 			<a href="#div-reference">
 				<p class="menu-item-txt">Reference</p>
@@ -47,7 +49,7 @@
 
 	<!-- Explore Button -->
 	<a href="explore.html">
-		<button type="button" class="btn-explore">EXPLORE</button>
+		<button type="button" class="btn-explore">INTERACTIVE MANUAL</button>
 	</a>
 
 	<!-- Intro Video -->
