--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="Styles/explore-styles.css">
 	<link rel="stylesheet" type="text/css" href="Styles/share-styles.css">
 
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
 
 </head>
@@ -15,8 +15,12 @@
 
 	<!-- Menu: anchored top -->
 	<div id="menu">
-		<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">	
-		<p class="page-title">AR DYNAMIC DESIGN</p>
+		<a href="index.html">
+			<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">
+		</a>
+
+			<p class="page-title">AR DYNAMIC DESIGN</p>
+		
 		<div class="menu-items">
 			<a href=" ">
 				<p class="menu-item-txt">Search</p>
