--- a/explore.html
+++ b/explore.html
@@ -9,6 +9,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
 
+	<script
+  	src="https://code.jquery.com/jquery-3.3.1.min.js"
+ 		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  	crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/1.2.0/json2html.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.json2html/1.2.0/jquery.json2html.min.js"></script>
+
 </head>
 <body>
 	
@@ -30,13 +38,18 @@
 
 	<div id="container">
 		<div id="right-side-panel">
-			<p class="body">Where information goes :)</p>
+			<div id="populate-html-content">
+				<p class="explore-body">Click on a node to read about different types and traits of UI elements.</p>
+			</div>
+<!-- 			
+			<ul></ul> -->
 		</div>
 		<div id="left-side-panel">
 		</div>
 	</div>
 
 	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="Scripts/populate-html-script.js"></script>
 	<script src="Scripts/explore-script.js"></script>
 
 </body>
