--- a/explore.html
+++ b/explore.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="Styles/share-styles.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Unna" rel="stylesheet">
 
 	<script
   	src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -26,9 +26,7 @@
 		<a href="index.html">
 			<img src="Resources/logo.png" alt="Logo Gif" class="logo-img">
 		</a>
-
 			<p class="page-title">AR DYNAMIC DESIGN</p>
-		
 		<div class="menu-items">
 			<a href=" ">
 				<p class="menu-item-txt">Search</p>
