--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="Styles/particlestyles.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Unna" rel="stylesheet">
 </head>
 <body>
 	<!-- Menu: anchored top -->
