cont populating html3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Explore Button -->
 	<a href="explore.html">
-		<button type="button" class="btn-explore">INTERACTIVE MANUAL</button>
+		<button type="button" class="btn-explore">CONTENT TAXONOMY</button>
 	</a>
 
 	<!-- Intro Video -->
@@ -106,7 +106,7 @@
 			<p class= "center title">Reference</p>
 			<p class= "center body">I can only complete this project standing on shoulders of giants. Having had opportunities to interview with quite a few AR developers, designers and experts, I&#39;m in the process of putting together a podcast that features some of these valuable perspectives.</p>
 
-			<p class= "center body">Have any feedback or want to be featured in my podcast? Shoot an email to chanel.luuhai@gmail.com</p>
+			<p class= "center body">Have any feedback or want to be featured in my podcast? Shoot an email to chanel.luuhai@gmail.com.</p>
 
 			<p class="center opinion">OPINIONS ARE MY OWN.</p>
 		</div>
