--- a/explore.html
+++ b/explore.html
@@ -226,7 +226,7 @@
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
-						Make sure the users know where the content is added. Design solutions to guide the users’ to look at where you want them to.
+						Make sure the users know where the content is added. Design solutions to guide the users to look in the direction you want them to.
 					</p>
 					<p class="side-subtitle-txt">Use Cases</p>
 					<p class="side-body-txt">
