--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPEhtml>
 <html>
 <head>
-	<title>Test Webpage</title>
+	<title>AR Dynamic Design</title>
 	<script src="Libraries/particles.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="Styles/home-styles.css">
