change to component

--- a/explore.html
+++ b/explore.html
@@ -24,7 +24,7 @@
 	<div id="menu" id="container">
 		<div id="menu-left-side-panel">
 			<a href="index.html"><img src="Resources/logo.png" alt="Logo Gif" class="logo-img"></a>
-			<p class="page-title">CONTENT TAXONOMY</p>
+			<p class="page-title">COMPONENT TAXONOMY</p>
 		</div>
 		<div id="menu-right-side-panel">
 			<p class="menu-item-txt" id="side-nav"></p>
@@ -39,14 +39,14 @@
 				<div id="intro">
 					<p class="side-title-txt">How to Use</p>
 					<p class="side-body-txt">Click on any node to read about different types and attributes of UI elements.</p>
-					<p class="side-body-txt">Tip: Start with Content attributes.</p>
+					<p class="side-body-txt">Tip: Start with Component Attributes.</p>
 				</div>
 
-				<!-------- 00.Content attribute --------->
+				<!-------- 00.Component attribute --------->
 				<div class="populated-content" id="content-attribute">
-					<p class="side-title-txt">Content Attributes</p>
+					<p class="side-title-txt">Component Attributes</p>
 					<p class="side-body-txt">
-						Although contents can come in many different shapes and forms, the below five questions can be used to break them down to their composing attributes.
+						Although components can come in many different shapes and forms, the below five questions can be used to break them down to their composing attributes.
 					</p>
 					<dl class="list">
 						<dt class="side-subtitle-txt"> How many dimensions does it have? </dt>
@@ -61,7 +61,7 @@
 						<dd class="side-body-txt">Determines the <b><a class="nav-link" id="11" href="">Interactivity</a></b> of the component. There are two types of interactivity: static and dynamic.</dd>
 
 						<dt class="side-subtitle-txt"> Where is it? </dt>
-						<dd class="side-body-txt">Determines the <b><a class="nav-link" id="14" href="">Position</a></b> of the component. There are three types: anchor to device, anchor to world, and anchor to content.</dd>
+						<dd class="side-body-txt">Determines the <b><a class="nav-link" id="14" href="">Position</a></b> of the component. There are three types: anchor to device, anchor to world, and anchor to component.</dd>
 					</dl>
 				</div>
 
@@ -69,7 +69,7 @@
 				<div class="populated-content" id="dimensionality">
 					<p class="side-title-txt">Dimensionality</p>
 					<p class="side-body-txt">
-						Dimensionality takes into consideration the UI contents' functional dimension attribute. There are two main types of dimensionality:
+						Dimensionality takes into consideration the UI components' functional dimension attribute. There are two main types of dimensionality:
 					</p>
 					<div class="icons">
 						
@@ -87,7 +87,7 @@
 						</div>
 					</div>
 					<p class="side-body-txt">
-						Contents with more dimensions can fit better into the real world, while 2D contents are often used for important information and navigation.
+						Components with more dimensions can fit better into the real world, while 2D components are often used for important information and navigation.
 					</p>
 				</div>
 
@@ -96,11 +96,11 @@
 					<p class="side-title-txt">Two Dimensions</p>
 					<img class="img-size" src="Resources/Icons/01_Dimensionality_2D.png">
 					<p class="side-body-txt">
-						As the name suggests, having two-dimension(2D) attribute means the content is flat. As the users move around, they cannot view different sides of contents with this attribute.
+						As the name suggests, having two-dimension(2D) attribute means the component is flat. As the users move around, they cannot view different sides of components with this attribute.
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
-						Limit the number of contents with 2D attributes since they interfere with users’ perception of the space. Even those that are anchored in the real world through floor calibration will look out of place against the user&#39;s surrounding environment. 
+						Limit the number of components with 2D attributes since they interfere with users’ perception of the space. Even those that are anchored in the real world through floor calibration will look out of place against the user&#39;s surrounding environment. 
 					</p>
 					<p class="side-subtitle-txt">Use Case</p>
 					<p class="side-body-txt">
@@ -119,14 +119,14 @@
 					<p class="side-title-txt">Three Dimensions</p>
 					<img class="img-size" src="Resources/Icons/01_Dimensionality_3D.png">
 					<p class="side-body-txt">
-						The three dimensions attribute allows users to view different sides of contents as they move their device or body around. 
+						The three dimensions attribute allows users to view different sides of components as they move their device or body around. 
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
-						This attribute can make the content seems to fit into the real world, especially when combined with the anchor to world positioning.
+						This attribute can make the component seems to fit into the real world, especially when combined with the anchor to world positioning.
 					</p>
 					<p class="side-body-txt">
-						Don&#39;t forget to design the back of the content as the users might be able to see it.
+						Don&#39;t forget to design the back of the component as the users might be able to see it.
 					</p>
 					<img class="img-size full" src="Resources/Icons/01_Dimensionality_3D.gif">
 					<p class="side-subtitle-txt">Use Cases</p>
@@ -134,9 +134,9 @@
 						3D attribute is often used for:  
 					</p>
 					<ul>
-						<li class="side-body-txt">Content that is positioned in relation to a surface in the real world</li>
+						<li class="side-body-txt">Component that is positioned in relation to a surface in the real world</li>
 						<li class="side-body-txt">
-							Content that overlays on top of or replaces a content in the real world
+							Component that overlays on top of or replaces a component in the real world
 						</li>
 					</ul>
 				</div>
@@ -145,7 +145,7 @@
 				<div class="populated-content" id="origin">
 					<p class="side-title-txt">Origin</p>
 					<p class="side-body-txt">
-						The origin attribute determines how a content is inserted into the digital layer of the experience. There are three types of origin:
+						The origin attribute determines how a component is inserted into the digital layer of the experience. There are three types of origin:
 					</p>
 					<div class="icons-three">
 						<div class="icon-three">
@@ -174,14 +174,14 @@
 					<p class="side-title-txt">Omnipresent</p>
 					<img class="img-size-three full" src="Resources/Icons/02_Origin_Omnipresent.png">
 					<p class="side-body-txt">
-						Having the omnipresent attribute means the content is present in the application when the augmented reality feature is enabled. 
+						Having the omnipresent attribute means the component is present in the application when the augmented reality feature is enabled. 
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
 						Often combined with the anchor to device positioning, this attribute can require significant screen real estate.
 					</p>
 					<p class="side-body-txt">
-						Use the omnipresent attribute only for important contents. Ask yourself they are the types of contents that users need to look at or have access to at any time.
+						Use the omnipresent attribute only for important components. Ask yourself they are the types of components that users need to look at or have access to at any time.
 					</p>
 					<p class="side-subtitle-txt">Use Cases</p>
 					<p class="side-body-txt">
@@ -201,11 +201,11 @@
 					<p class="side-title-txt">Manual</p>
 					<img class="img-size-three full" src="Resources/Icons/02_Origin_Manual.gif">
 					<p class="side-body-txt">
-						If a content can be manually added to the digital layer by the users, it has the manual attribute.  
+						If a component can be manually added to the digital layer by the users, it has the manual attribute.  
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
-						Contents with manual attribute should be well positioned within the real world. Users already have a complete control of the camera and they can easily tell if the contents that they add aren&#39;t where they want them to be. 
+						Components with manual attribute should be well positioned within the real world. Users already have a complete control of the camera and they can easily tell if the components that they add aren&#39;t where they want them to be. 
 					</p>
 					<p class="side-subtitle-txt">Use Cases</p>
 					<p class="side-body-txt">
@@ -222,11 +222,11 @@
 					<p class="side-title-txt">Procedural</p>
 					<img class="img-size-three full" src="Resources/Icons/02_Origin_Procedural.gif">
 					<p class="side-body-txt">
-						Content can be added by the system procedurally. This action is often triggered by a marker or geolocation. 
+						Component can be added by the system procedurally. This action is often triggered by a marker or geolocation. 
 					</p>
 					<p class="side-subtitle-txt">Design Guidelines</p>
 					<p class="side-body-txt">
-						Make sure the users know where the content is added. Design solutions to guide the users to look in the direction you want them to.
+						Make sure the users know where the component is added. Design solutions to guide the users to look in the direction you want them to.
 					</p>
 					<p class="side-subtitle-txt">Use Cases</p>
 					<p class="side-body-txt">
