--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Explore Button -->
 	<a href="explore.html">
-		<button type="button" class="btn-explore">CONTENT TAXONOMY</button>
+		<button type="button" class="btn-explore">COMPONENT TAXONOMY</button>
 	</a>
 
 	<!-- Intro Video -->
@@ -75,9 +75,9 @@
 		  </div>
 		  <div class="column">
 		  	<a href="explore.html">
-			  	<p class="column-header-txt">Content Taxonomy</p>
+			  	<p class="column-header-txt">Component Taxonomy</p>
 		    	<p class="column-body-txt">
-		    		This product proposes a taxonomy system for AR content types and attributes to assist designers and developers next time we wonder "How should I Google this?" 
+		    		This product proposes a taxonomy system for AR component types and attributes to assist designers and developers next time we wonder "How should I Google this?" 
 		    	</p>
 		    	<p class="column-body-txt"> Version 0.0.1 is available to view.</p>
 	    	</a>
@@ -85,7 +85,7 @@
 		  <div class="column">
 		  	<p class="column-header-txt">Interactions</p>
 	    	<p class="column-body-txt">
-	    		How can the content types defined in the Content Taxonomy interact with one another and how can users interact with them? 
+	    		How can the component types defined in the Component Taxonomy interact with one another and how can users interact with them? 
 	    	</p>
 	    	<p class="column-body-txt"> Will be available in February 2019.</p>
 		  </div>
